tests/integration/snapshots/build/test_build_contract_syntax_error.stderr.txt
Error: In broken:

[ROOT]/contracts/broken[LINE]: error: expected <expression>, got `;`
   3 |                 val x = ;
     |                         ^

Build failed with 1 error
